--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
     <nav class="sidebar" id="sidebar">
       <div class="sidebar-header">
-        <div class="sidebar-title">Your Name</div>
+        <div class="sidebar-title">Waves Of Obsession</div>
         <div class="sidebar-subtitle">notes &amp; links</div>
       </div>
       <div class="show-all active" id="show-all">all blocks</div>
@@ -455,6 +455,18 @@ const TAGS = {
 // ════════════════════════════════════════════════════════════
 
 const blocks = [
+
+  {
+    title: "What do you know about attention?",
+    date:  "2026-02-20",
+    tags:  ["idea", "note"],
+    body: `
+      <p>I have spent the last few weeks, thinking deeply about attention. I have begun to view it like a magnetic field that radiates from my core. Every moment of day this field is being pulled or deformed by the "things" around me. I am fascinated by the cell phone in particular, in the short form to be direct. The phone acts like a strong magnet, attracting all of your attention field into this small rectangular frame, your peripheral vison goes, then your audile and before your know it your wife is yelling at you, asking "Did you even hear a word I just said!". We freely allow our field to be highjacked, yes we could say "there is a war going on for our minds", however it is one of consent, we choose to give up our attention. Call it a field, or think of it as a resource with a transaction, a limited account with dwindling funds. 
+I have taken a short departure from these things that "steal" my attention, I find no profit in them at this time.
+Come back to this later....</p>
+      <p>See also: <a href="#" class="wikilink">William James The Principles of Psycholgy →</a></p>
+    `
+  },
 
   {
     title: "Reverse sear is the only way to cook a thick steak",
