--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Name</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&family=Lora:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
   <style>
+    @font-face {
+  font-family: 'JetBrains Mono';
+  src: url('fonts/jetbrains-mono-400.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('fonts/jetbrains-mono-500.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lora';
+  src: url('fonts/lora-400.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lora';
+  src: url('fonts/lora-400-italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Lora';
+  src: url('fonts/lora-500.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
     :root {
       --bg:        #0d0d0d;
       --bg-side:   #111111;
@@ -457,13 +494,39 @@ const TAGS = {
 const blocks = [
 
   {
+    title: "Systems over Goals",
+    date:  "2026-02-20",
+    tags:  ["idea", "note"],
+    body: `
+      <p>This website is a system not a goal. 
+        Copy a block, write out your thought, idea, note, concept, book review, recipe, etc. 
+        Move forward and write it out, clean it up later, fix it later, do the next thing, then do the next thing then do the next thing. 
+        Remember that even telling yourself "I do not know what to do" is the next thing, you can loop it, make it happen because you choose to 
+        perform a negation, and it happens, you do NOT know what to do next, and then you do nothing. Maintain the chain, move forward, have a large bucket 
+        full of next things to do. The weather is starting to change slightly, I have some seedling started in the window. 
+      </p>
+      <p>Come back to this later....</p>
+    `
+  },
+
+  {
     title: "What do you know about attention?",
     date:  "2026-02-20",
     tags:  ["idea", "note"],
     body: `
-      <p>I have spent the last few weeks, thinking deeply about attention. I have begun to view it like a magnetic field that radiates from my core. Every moment of day this field is being pulled or deformed by the "things" around me. I am fascinated by the cell phone in particular, in the short form to be direct. The phone acts like a strong magnet, attracting all of your attention field into this small rectangular frame, your peripheral vison goes, then your audile and before your know it your wife is yelling at you, asking "Did you even hear a word I just said!". We freely allow our field to be highjacked, yes we could say "there is a war going on for our minds", however it is one of consent, we choose to give up our attention. Call it a field, or think of it as a resource with a transaction, a limited account with dwindling funds. 
-I have taken a short departure from these things that "steal" my attention, I find no profit in them at this time.
-Come back to this later....</p>
+      <p>I have spent the last few weeks, thinking deeply about attention. 
+      I have begun to view it like a magnetic field that radiates from my core. 
+      Every moment of day this field is being pulled or deformed by the "things" around me. 
+      I am fascinated by the cell phone in particular, in the short form to be direct. 
+      The phone acts like a strong magnet, attracting all of your attention field into this small rectangular frame, 
+      your peripheral vison goes, then your hearing and before your know it your wife is yelling at you, 
+      asking "Did you even hear a word I just said!". We freely allow our field to be highjacked, yes we could say 
+      </p>
+      <p>"there is a war going on for our minds", however it is one of consent, we choose to give up our attention. 
+      Call it a field, or think of it as a resource with a transaction, a limited account with dwindling funds. 
+      I have taken a short departure from these things that "steal" my attention, I find no profit in them at this time. 
+      </p>
+      <p>Come back to this later....</p>
       <p>See also: <a href="#" class="wikilink">William James The Principles of Psycholgy →</a></p>
     `
   },
